[package]
name = "vg"
version = "0.1.0"
authors = ["Andrew Shidel <andrew@shidel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
log = "0.4"
time = "0.1"
fuse_mt = "0.5.0"
git2 = "0.10.1"
tempdir = "0.3.7"
github-rs = "0.7"
serde_json = "1.0"
chrono = "0.4"
lazy_static = "1.4.0"
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
base64 = "0.11.0"
